Fix enum config select element being clipped in session config panel

--- a/shared/studio/components/sessionState/sessionState.module.scss
+++ b/shared/studio/components/sessionState/sessionState.module.scss
@@ -616,12 +616,14 @@
     align-items: center;
     min-height: 32px;
     min-width: 0;
-    overflow-x: auto;
-
-    @include hideScrollbar;
 
     @include darkTheme {
       --select-option-color: #adadad;
+    }
+
+    &.noOverflow {
+      overflow-x: auto;
+      @include hideScrollbar;
     }
   }
 
